lab1/Test/L1-A-10-50.output
Error Type A at Line 1
Error Type A at Line 9
Error Type A at Line 14
Error Type A at Line 26
Error Type A at Line 29
Error Type B at Line 35
